tests/compile-fail/derive_enum_wrong_location_type.stderr
error: field 'location' exists but is not of type Location; use Location type or mark the correct field with #[stack(location)]
 --> tests/compile-fail/derive_enum_wrong_location_type.rs:7:16
  |
7 |     Variant1 { location: String },
  |                ^^^^^^^^
